.metadata/.plugins/org.eclipse.cdt.ui/Car.build.log
14:28:07 **** Incremental Build of configuration Debug for project car ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/bluetooth.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xE -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/bluetooth.d" -MT"Core/Src/bluetooth.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/bluetooth.o"
../Core/Src/bluetooth.c: In function 'ProcessReceivedPackage':
../Core/Src/bluetooth.c:80:9: warning: implicit declaration of function 'VerifyChecksum' [-Wimplicit-function-declaration]
   80 |     if (VerifyChecksum(pkg) != 0) {
      |         ^~~~~~~~~~~~~~
../Core/Src/bluetooth.c: In function 'ProcessMotionCmd':
../Core/Src/bluetooth.c:193:13: warning: implicit declaration of function 'moveTurnRight'; did you mean 'moveTrunRight'? [-Wimplicit-function-declaration]
  193 |             moveTurnRight(&htim4);
      |             ^~~~~~~~~~~~~
      |             moveTrunRight
../Core/Src/bluetooth.c:208:23: error: 'pkg' undeclared (first use in this function)
  208 |     UART_SendPackage(&pkg);
      |                       ^~~
../Core/Src/bluetooth.c:208:23: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:46: Core/Src/bluetooth.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

14:28:08 Build Failed. 2 errors, 2 warnings. (took 435ms)

